# license-sniffer

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/scanners/: nodeScanner.py
src/scanners/node/: nodeScanner.py
src/scanners/utils/: licenseCategorize.py
