[tool.poetry]
name = "licensesniffer"
version = "0.1.0"
description = "Analyzes installed packages and produces metadata"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
